# Himmy-personal-agent

./: .gitignore  README.md  chat.sh  pyproject.toml  requirements.txt  serve.sh
.github/workflows/: build-windows.yml
agent/: agent.yaml
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/buildResources/: afterPack.cjs  icon.icns
desktop/electron/: main.cjs  preload.cjs
desktop/src/: App.tsx  ChatMarkdown.tsx  PlanWeekModal.tsx  Reader.tsx  WeekGrid.tsx  index.css
desktop/src/lib/: api.ts  cite.ts
docs/: DAYBOOK_BRIEF_QUICKWINS_REPORT.md  HIMMY_UPGRADE_REPORT.md  himmy-app-roadmap.md  himmy-app-roadmap.raw.json  himmy-command-center-plan.md  himmy-make-it-better-brief.md  himmy-recsys-plan.md  mail-tab-overhaul-plan.md
extension/: README.md  background.js  manifest.json
packaging/: gen_icon.py  himmy-backend.spec  himmy_backend_entry.py
scripts/: build-mac.sh  build-win.ps1
src/himmy_app/: __init__.py  activity.py  agent_tools.py  attachments.py  brief.py  cli.py  config.py  dayplan.py  do_concierge.py  email_money.py  feedback.py  festivals.py  finance.py  library.py  news.py  news_index.py  nudges.py  permissions.py  planner.py  proactive.py  provider_keys.py  reading.py  research.py  routines.py  server.py  tasks_extra.py  telegram.py  url_guard.py  user_profile.py  weather.py
src/himmy_app/connectors/: __init__.py  _net.py  _register.py  actions.py  buddha_air.py  bussewa.py  daraz.py  finance.py  foodmandu.py  forex.py  gmail_actions.py  google_calendar.py  media.py  nepse.py  news_rag.py  papers_rag.py  zotero.py  zotero_client.py
src/himmy_app/recsys/: __init__.py  profile.py  recommend.py  sources.py
tests/: conftest.py  test_attachments.py  test_backup_restore.py  test_dayplan.py  test_email_money.py  test_finance.py  test_mail.py  test_morning_push.py  test_news.py  test_news_digest.py  test_news_index.py  test_news_split.py  test_nudges.py  test_planner.py  test_proactive.py  test_reading.py  test_recommend.py  test_recsys_profile.py  test_smoke.py  test_tasks_extra.py  test_tasks_planner.py  test_user_profile.py
