[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "himmy-app"
version = "0.1.0"
description = "Himmy — a native macOS personal research & productivity assistant: your library, papers (RAG), tasks, news, mail & calendar, with one assistant across all of it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Samriddha" }]
keywords = ["assistant", "research", "rag", "citations", "agent", "himmy", "productivity"]

# himmy is the framework this app is built ON, consumed AS A LIBRARY (editable install of the
# local himmy repo — same relationship yetidai/samriddha-farm have). Extras we use:
#   - toolkit:    web_fetch + HTML parsing (the `web` pack), KB ingest helpers
#   - api:        fastapi/uvicorn/starlette — `himmy serve` (the API surface) needs this
#   - openai:     the OpenRouter provider (gemini-2.5-flash) lives here
#   - embeddings: fastembed local embedder for the papers RAG (no API key needed)
#   - nepal:      nepali_datetime — AD↔Bikram-Sambat for the bussewa bus connector
# himmy is NOT on PyPI — install it editable first (see requirements.txt), then `pip install -e .`.
dependencies = [
  "himmy[toolkit,api,openai,embeddings,nepal]",
  "httpx>=0.27",
  "pypdf>=4",        # fallback PDF text extraction when Zotero's own text index is unavailable
  "trafilatura>=2",  # clean in-app article extraction for the News reader (Safari-Reader-style)
  "tzlocal>=5",      # the machine's IANA timezone, so calendar events land at the right local hour
  # Windows only: encrypted key storage via Credential Manager (DPAPI). keyring provides the
  # WinVault backend; pywin32-ctypes is its runtime shim. macOS uses its Keychain (through himmy)
  # and needs neither, so these are scoped to win32 to leave Mac/Linux installs unchanged.
  "keyring>=24; sys_platform == 'win32'",
  "pywin32-ctypes>=0.2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
# Headless entrypoint — talk to Himmy from the terminal. Named `himmy-app` so it doesn't
# collide with the `himmy` CLI that the framework (a dependency) installs.
himmy-app = "himmy_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
himmy_app = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
[[tool.mypy.overrides]]
module = "himmy.*"
ignore_missing_imports = true
